welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:3: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
    }  avance()
       ^Runner:5: error: value gauche is not a member of Unit
possible cause: maybe a semicolon is missing before `value gauche'?
      }	gauche()
        ^