welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
for (i <- 1 to 28){
    for (k <- 1 to 4) {
    }  avance()
    	for (l <-1 to 2) {
      }	gauche()
    		for (j <-1 to 4)
      			droite()
    			for (h <- 1 to 2)
      				droite()
    				for (f <- 1 to 4)
  							gauche()
}